--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             geoblog
         
     </div>
-<ul><li class="active"><a href="index.html">index</a></li><li><a href="#"><span></span>AngularJS</a><ul><li><a href="html/AngularJS/angular-coding.html">angular-coding</a></li></ul></li><li><a href="#"><span></span>前端设计思想</a><ul></ul></li><li><a href="#"><span></span>工具使用</a><ul><li><a href="html/工具使用/如何编写GitHub的ReadMe.html">如何编写GitHub的ReadMe</a></li></ul></li><li><a href="#"><span></span>CSS</a><ul><li><a href="html/CSS/Less与Sass.html">Less与Sass</a></li></ul></li></ul></div>
+<ul><li class="active"><a href="index.html">index</a></li><li><a href="#"><span></span>AngularJS</a><ul><li><a href="html/AngularJS/AngularJS 编码规范.html">AngularJS 编码规范</a></li></ul></li><li><a href="#"><span></span>工具使用</a><ul><li><a href="html/工具使用/如何编写GitHub的ReadMe.html">如何编写GitHub的ReadMe</a></li></ul></li><li><a href="#"><span></span>CSS</a><ul><li><a href="html/CSS/Less与Sass.html">Less与Sass</a></li></ul></li><li><a href="#"><span></span>JQuery相关</a><ul><li><a href="html/JQuery相关/JQuery-Sortable排序.html">JQuery-Sortable排序</a></li><li><a href="html/JQuery相关/JqueryUI-Draggable(拖动).html">JqueryUI-Draggable(拖动)</a></li></ul></li></ul></div>
 
 
 <div class="warpper">
